[fix]关于第一回合道具拾取bug